--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
